# fuzzy_mi_controller

./: LICENSE  README.md  fuzzy_controller_angles_combination.fll
experiments_launch/: CMakeLists.txt  package.xml
experiments_launch/config/: base_local_planner_optimal_params.yaml  base_local_planner_params.yaml  clear_costmap_params.yaml  costmap_common_laser_noise.yaml  costmap_common_params.yaml  costmap_common_params_optimal.yaml  global_costmap_params.yaml  laser_filter.yaml  local_costmap_params.yaml  local_costmap_params_optimal.yaml  navfn_params.yaml  recovery_params.yaml
experiments_launch/launch/: amcl.launch  amcl_training.launch  bayes_control.launch  custom.launch  entropy_world.launch  gazebo_testing.launch  gazebo_world.launch  hector_slam.launch  hier_mi_control.launch  husky_gazebo_intent.launch  husky_gazebo_localization.launch  husky_gazebo_mapping.launch  husky_gazebo_mi.launch  husky_gazebo_mi_experiment.launch  husky_gazebo_mi_experiment_old.launch  husky_gazebo_mi_training.launch  husky_gazebo_slam.launch  husky_gazebo_teleopi_experiment.launch  map_server.launch  mapping.launch  mi_control.launch  mi_control_old.launch  mi_deep_control.launch  mi_hier_control.launch  mi_intent_control.launch  mongo_log.launch  mongo_store.launch  morse_arena.launch  morse_mapping.launch  morse_training.launch  move_base.launch  move_base_expert.launch  move_base_mapping.launch  move_base_no_noise.launch  move_base_noise.launch  move_base_optimal.launch  offline_error_log.launch  operator.launch  robot_SLAM.launch  robot_nav.launch  (+14 more)
experiments_launch/rviz_cfg/: rosbag.rviz  rviz_both_config.rviz  rviz_camera_config.rviz  rviz_cfg.rviz  rviz_costmap_debug.rviz  rviz_husky.rviz  rviz_laser_config.rviz  rviz_training.rviz
experiments_launch/world/: cog_avail_arena.world  cog_avail_arena.yaml  hierarchical_arena.world  hierarchical_arena.yaml  map.pgm  map.yaml  mi_map.yaml  morse_arena.py  morse_mapping.py  morse_training.py  negotiation_arena.pgm  negotiation_arena.world  negotiation_arena.yaml  test_arena.world  test_arena_new.world  test_arena_new2.world  testarena1.world  training_arena.world  training_map.pgm  training_map.yaml
experiments_launch/world/arena_walls/arena_walls/: model.sdf
experiments_launch/world/arena_walls2/: model.sdf
experiments_launch/world/building_editor_models/tesetarena1/: model.sdf
experiments_launch/world/building_editor_models/testing/: model.config  model.sdf
experiments_launch/world/exp2_arena/: new_arena.blend  new_arena.blend1  new_arena.blend2  new_arena_old.blend
experiments_launch/world/model_editor_models/Human-static/: model.config  model.sdf
experiments_launch/world/model_editor_models/arena_walls/: model.sdf
experiments_launch/world/model_editor_models/asphalt_plane_big/: model.config  model.sdf
experiments_launch/world/model_editor_models/barrel_rusty/: model.config  model.sdf
experiments_launch/world/model_editor_models/cardboard_box_big/: model.config  model.sdf
experiments_launch/world/model_editor_models/tesetarena1/: model.config  model.sdf
experiments_launch/world/model_editor_models/unit_box/: model.sdf
experiments_launch/world/model_editor_models/uob_brick_wall_10m/: model.config  model.sdf
experiments_launch/world/model_editor_models/uob_brick_wall_250cm/: model.config  model.sdf
experiments_launch/world/model_editor_models/uob_brickwall_10m/: model.config  model.sdf
experiments_launch/world/model_editor_models/uob_brickwall_5m/: model.config  model.sdf
experiments_launch/world/training_arena/: training_arena.blend  training_arena.blend2
experiments_launch/world/vrep_ros/: Camera.lua  Hokuyo_laser.lua  Pioneer_p3dx.lua  arena.ttt  arena2.ttt
laser_noise/: CMakeLists.txt  package.xml
laser_noise/src/: laser_noise_node.cpp
mixed_initiative_teleop/: CMakeLists.txt  package.xml
mixed_initiative_teleop/launch/: mixed_initiative_teleop.launch
mixed_initiative_teleop/src/: mixed_initiative_teleop.cpp
status_publisher/: CMakeLists.txt  package.xml
status_publisher/images/: ModeTempl.xcf  StatusTempl.xcf
status_publisher/src/: cam_compress.cpp  experiment_logger.cpp  pose_publisher.py  status_publisher.cpp  status_sound_publisher_node.cpp  status_sound_publisher_node.cpp.autosave
variable_autonomy/: CMakeLists.txt  package.xml
variable_autonomy/src/: control_data_logger_node.cpp  control_mixer_node.cpp  mi_fuzzy_controller_deepgaze_node.cpp  mi_fuzzy_controller_deepgaze_node.cpp.autosave  mi_fuzzy_controller_intent_node.cpp  mi_fuzzy_controller_node.cpp  mi_fuzzy_hier_controller_node.cpp  mi_fuzzy_intent_controller_node.cpp  mi_threshold_controller_node.cpp
