<?xml version="1.0"?>
<package>
  <name>experiments_launch</name>
  <version>1.0.0</version>
  <description>The experiments_launch package contains the launch files for running the mixed initiative experiments on a pioneer P3-DX </description>

 <maintainer email="manolis.chiou@gmail.com">Manolis Chiou</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/experiments_launch</url> -->

 <author email="manolis.chiou@gmail.com">Manolis Chiou</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>mixed_initiative_teleop</build_depend>
  <build_depend>move_base</build_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>mixed_initiative_controller</run_depend>
  <run_depend>mixed_initiative_teleop</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>fake_localization</run_depend> 
  <run_depend>hector_slam</run_depend>
  <run_depend>global_planner</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
